--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /WebApplication/bin/Debug/netcoreapp3.1
+/WebApplication/obj
