--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApplicationContext": "Server=(localdb)\\mssqllocaldb;Database=WebApplicationContext-763c69db-55fd-4316-b6cc-8e4097ae9a57;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
