--- a/WebApplication2/WebApplication2/appsettings.json
+++ b/WebApplication2/WebApplication2/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApplication2Context": "Server=(localdb)\\mssqllocaldb;Database=WebApplication2Context-4a3e300f-d106-4039-830c-67e30e1ec67e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebApplication2Context": "Server=.\\sqlexpress;Database=WebApplication2Context-4a3e300f-d106-4039-830c-67e30e1ec67e;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
