--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /WebApplication2/WebApplication2/bin
 /WebApplication2/WebApplication2/obj
 \WebApplication2\WebApplication2\wwwroot\images\Categories
+/WebApplication2/WebApplication2/wwwroot/images/Categories
+/WebApplication2/WebApplication2/wwwroot/images/product
